--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To DevOps Training In Telugu Batch 20 & 21 By Sreeharsha Veerapalli</h1>
+	<h1>Welcome To AWS/AZURE/DevOps/kubernetes Training By Mali BalaKrishna</h1>
 	<h1>Ansible Playbook Testing With Tags</h1>
 	<div id="smallcont">
 		<div></div>
